

libHX 2.7 (April 08 2009)
=========================
Fixes:
- install missing wx_helper.hpp


libHX 2.6 (March 28 2009)
=========================
Documentation:
- install documentation
- update project URLs
- add section about Miscellaneous functions
Changes:
- arbtree: add "flat view" operation
- misc: added HX_fls
- misc: make HX_time_compare otime-capable
- add wx_helper.hpp


libHX 2.5 (February 11 2009)
============================
Fixes:
- proc: fix fd setup when the standard channels are already closed


libHX 2.4 (February 05 2009)
============================
Documentation updates. A few internal cleanups, nothing user-visible.


libHX 2.3 (January 13 2009)
===========================
Fixes:
- defs: only use __builtin_offsetof with GCC >= 4
- misc: fix time_compare on FreeBSD to actually use mtimespec
- mc: handle HXmc_length(NULL)
- dir: do not cause directory traversal to restart after 2^32 entries


libHX 2.2 (January 01 2009)
===========================
Fixes:
- defs/cast: avoid warning between conversion from type[] to type *
- defs/cast: add fallback defs for const_castN()
- arbtree: correctly set errno (to ENOENT) in HXbtree_find and _get
- string: document behavior details of HX_basename

Changes:
- removed old HX_vfsystem

Features:
- defs: add HXSIZEOF_Z*
- defs: add HX_STRINGIFY
- proc: initial code
- string: add HX_split4 function


libHX 2.1 (December 23 2008)
============================
- defs: fix bogus offsetof macro for non-GCC
- defs: add a pair of guarding parentheses in static_cast()
- doc: generate PDF file from LyX document


libHX 2.0 (December 23 2008)
============================
Fixes:
- arbtree: reject illegal flag combinations
- arbtree: correctly set errno in HXbtree_find and HXbtree_get
- arbtree: do not return dangling pointer in HXbtree_del
- defs: add a working offsetof() and containerof() for C++ mode
- defs: use GCC's __builtin_offsetof
- defs: resolve warnings with signed_cast() for char* -> const char* conversions